--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "jsx": "react",
+    "allowSyntheticDefaultImports":true,
     "lib": [
       "ES2022",
       "dom"
