--- a/package.json
+++ b/package.json
@@ -18,6 +18,20 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@elastic/charts": "^59.1.0",
+    "@elastic/datemath": "5.0.3",
+    "@elastic/eui": "81.0.0",
+    "@emotion/css": "11.10.6",
+    "@emotion/react": "11.10.6",
+    "bootstrap": "4.6",
+    "jquery": "3.5",
+    "lodash": "4.17.21",
+    "moment": "2.29.1",
+    "moment-timezone": "0.5.28",
+    "popper.js": "^1.16.1",
+    "randomcolor": "^0.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -27,6 +41,9 @@
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/randomcolor": "^0.5.9",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
